# dashburg-modules

./: PUBLIC_INSTALL.md  README.md
discord-control/: README.md  dashburg-module.json
idea-factory/: README.md  (+1 more)
trends-researcher/files/services/trends-runtime/: .env.example  CODEXHELP.md  DASHBURG.md  DASHBURG_NOTES.md  PLAN.md  PLANLLM.md  README.md  pyproject.toml
trends-researcher/files/services/trends-runtime/docs/: DASHBURG_INTEGRATION.md
trends-researcher/files/services/trends-runtime/tests/: test_channel_metadata.py  test_channel_ranking.py  test_channels.py  test_connectors.py  test_dedupe.py  test_focus.py  test_harvester_filtering.py  test_llm_json_parsing.py  test_scoring.py  test_x_connector.py
trends-researcher/files/services/trends-runtime/trend_harvester/: cli.py  config.py  db.py  enums.py  main.py  models.py  schemas.py
trends-researcher/files/services/trends-runtime/trend_harvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
trends-researcher/files/services/trends-runtime/trend_harvester/api/: routes.py
trends-researcher/files/services/trends-runtime/trend_harvester/migrations/: runner.py
trends-researcher/files/services/trends-runtime/trend_harvester/migrations/sql/: 001_initial.sql  002_channel_metadata.sql
trends-researcher/files/services/trends-runtime/trend_harvester/services/: channel_metadata.py  channel_ranking.py  channels.py  dedupe.py  exporter.py  focus.py  harvester.py  http_utils.py  llm.py  openai_client.py  openai_key_store.py  run_logs.py  scoring.py  strategy_pass.py
(+240 files in other folders)
