[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-harvester"
version = "0.1.0"
description = "Local-first Topic/Trend Harvester backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]

[project.scripts]
trend-harvester = "trend_harvester.cli:main"

[tool.setuptools.packages.find]
include = ["trend_harvester*"]

[tool.setuptools.package-data]
"trend_harvester" = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
